--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
   "build": "prisma generate",
-  "start": "node index.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "node index.js"
 }
+
 ,
   "keywords": [],
   "author": "",
