--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,17 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.js",
+      "src": "index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["server/prisma/**", "server/node_modules/.prisma/**"]
+        "includeFiles": ["prisma/**", "node_modules/.prisma/**"]
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server/index.js"
+      "dest": "index.js"
     }
   ]
 }
