--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
-  "scripts": {
+  "main": "index.js","scripts": {
   "build": "prisma generate",
-  "start": "node index.js"
+  "start": "node index.js",
+  "postinstall": "prisma generate"
 }
 
 ,
